# mapreduce_hw2_cpp

./: .gitignore  .gitmodules  build.py  readme.md
Shuffle_Reducer_test/: main.cc  main.cpp  test.cpp  threadpool_test.cc
cmake/: CMakeLists.txt  mr_unittest.cmake
inc/concurrency/: threadpool.h
inc/job/: file_mapping.h  job.h
inc/map/: map_base.h
inc/utils/: job_context.h  macro.h  mapreduce_context.h  utils.h
lib/: ThreadPoolEtalon.cpp  file_mapping.cc  job.cc  job_context.cc  map_base.cc  mapreduce_context.cc  threadpool.cc  utils.cc
test/: 1.txt  2.txt  all_test.cc  bullshit_test.cc  integrated_test.py  main.cc  mapper_test.cc  test_utils.cc  test_utils.h  threadpool_test.cc
